# sysopy

./: .gitignore
1. rozgrzewka/: CMakeLists.txt  Makefiledrozdzika
1. rozgrzewka/cw01/zad2/: raport2.txt
1. rozgrzewka/cw01/zad2/inc/: lib.h
1. rozgrzewka/cw01/zad2/lib/: CMakeLists.txt
1. rozgrzewka/cw01/zad2/src/: main.c
1. rozgrzewka/cw01/zad3a/: results3a.txt
1. rozgrzewka/cw01/zad3b/: CMakeLists.txt  results3b.txt
1. rozgrzewka/cw02/zad1/: CMakeLists.txt
1. rozgrzewka/cw02/zad1/lib/: CMakeLists.txt
1. rozgrzewka/cw03/zad1/src/: main.c
1. rozgrzewka/cw03/zad2/: test.txt
1. rozgrzewka/cw03/zad2/src/: main.c
1. rozgrzewka/cw04/zad1a/src/: main.c
1. rozgrzewka/cw04/zad3/src/: main.c
1. rozgrzewka/cw05/zad2/: CMakeLists.txt
1. rozgrzewka/cw06/zad1/src/: client.c  parameters.h  server.c
1. rozgrzewka/cw06/zad2/src/: client.c  parameters.h  server.c
1. rozgrzewka/cw08/zad1/: CMakeLists.txt
1. rozgrzewka/cw08/zad1/src/: main.c
1. rozgrzewka/cw7/zad1/src/: common.h
1. rozgrzewka/cw7/zad2/: CMakeLists.txt
1. rozgrzewka/cw7/zad2/src/: barber.c
1. rozgrzewka/lib/: CMakeLists.txt
1. rozgrzewka/src/: main.c
1. rozgrzewka/test/: results3a.txt  results3b.txt
KozaWojciech/cw01/zad2/: CMakeLists.txt
KozaWojciech/cw01/zad3a/: CMakeLists.txt
KozaWojciech/cw01/zad3b/lib/: lib.c
KozaWojciech/cw02/zad1/inc/: lib.h
KozaWojciech/cw02/zad1/lib/: lib.c
KozaWojciech/cw02/zad1/src/: main.c
KozaWojciech/cw02/zad1/test/: wyniki.txt
KozaWojciech/cw02/zad2/src/: main.c
KozaWojciech/cw03/zad1/: CMakeLists.txt
KozaWojciech/cw03/zad1/src/: main.c
KozaWojciech/cw03/zad3/src/: main.c
KozaWojciech/cw04/zad1b/src/: main.c
KozaWojciech/cw04/zad2/src/: main.c
KozaWojciech/cw04/zad3/src/: main.c
KozaWojciech/cw05/zad1/src/: main.c
KozaWojciech/cw05/zad2/src/: master.c  slave.c
KozaWojciech/cw06/zad1/: CMakeLists.txt
KozaWojciech/cw06/zad1/src/: server.c
KozaWojciech/cw06/zad2/src/: client.c  server.c
KozaWojciech/cw07/zad1/: CMakeLists.txt
KozaWojciech/cw07/zad1/src/: barber.c  client.c  common.c  common.h
KozaWojciech/cw07/zad2/: CMakeLists.txt
KozaWojciech/cw07/zad2/src/: barber.c  client.c  common.c  common.h
KozaWojciech/cw7/zad1/src/: barber.c  client.c
KozaWojciech/cw7/zad2/src/: client.c  common.h
KozaWojciech/zad1/src/: additions.h  client.c  server.c
KozaWojciech/zad2/: CMakeLists.txt
KozaWojciech/zad2/src/: additions.h  client.c  server.c
rozgrzewka/: CMakeLists.txt  data.txt
rozgrzewka/lib/: CMakeLists.txt  lib.c
rozgrzewka/src/: main.c
test/: results3a.txt
